--- a/src/app/pages/index/index.component.scss
+++ b/src/app/pages/index/index.component.scss
@@ -48,3 +48,11 @@
         @include box-shadow( 0 2px 10px 0 rgba($info, .5));
     }
 }
+
+.h2{
+    color: rgb(255, 153, 0);
+}
+
+.p{
+    color: blueviolet;
+}
