--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -12,7 +12,7 @@
         <span class="input-group-addon addon-left" id="password">
           <i class="fa fa-lock fa-fw"></i>
         </span>
-        <input class="form-control with-primary-addon" [(ngModel)]="Passwords"  placeholder="Password" type="password" id="password">
+        <input class="form-control with-primary-addon" [(ngModel)]="passwords"  placeholder="Password" type="password" id="password">
       </div>
       <button class="btn btn-lg btn-primary" (click)="login()">Login</button>
       <a href="" class="btn btn-link">Register Now. →</a>
