--- a/src/app/shared/layouts/pages-top/pages-top.component.html
+++ b/src/app/shared/layouts/pages-top/pages-top.component.html
@@ -17,8 +17,8 @@
 
 
   <div class="search-group">
-    <input type="text" class="search-input" placeholder="Search project · · ·">
-    <button class="search-btn">
+    <input type="text" class="search-input" placeholder="Search  · · ·" [(ngModel)]="serachemp">
+    <button class="search-btn" (click)="empsearch()">
       <i class="fa fa-search fa-fw"></i>
     </button>
   </div>
