--- a/src/app/pages/manager/employees/employees.component.html
+++ b/src/app/pages/manager/employees/employees.component.html
@@ -1,6 +1,9 @@
 <div class="row">
   <div class="col-md-12">
     <!-- <card cardTitle="Data Table"> -->
+      <button class="btn btn-success right" (click)="[fifthModal.open(), empAdd()]" *ngIf="role != 3">
+        <i class="fa fa-plus-circle" aria-hidden="true">ADD</i>
+      </button>
       <table class="table table-bordered">
         <thead>
           <tr>
@@ -12,10 +15,10 @@
             <th>AGE</th>
             <th>NUMBER</th>
             <th>EDIT</th>
-            <th>DELETE</th>
+            <th *ngIf="role != 3">DELETE</th>
           </tr>
         </thead>
-        <tbody>
+        <tbody *ngIf="role != 3">
           <tr *ngFor="let item of employees | paginate: { id: 'pager', itemsPerPage: pageSize, currentPage: pageNumber};let index = index">
             <td>{{index+1}}</td>
             <td>{{item.emp_first_name}}</td>
@@ -37,9 +40,24 @@
               </button>
             </td>
           </tr>
-          <button class="btn btn-icon btn-danger" (click)="[fifthModal.open(), empAdd()]">
-            <i class="fa fa-plus-circle" aria-hidden="true">ADD</i>
-          </button>
+        </tbody>
+        <tbody *ngIf="role == 3">
+          <tr>
+            <td>1</td>
+            <td>{{item.emp_first_name}}</td>
+            <td>{{item.emp_last_name}}</td>
+            <td>{{item.emp_email}}</td>
+            <td>{{item.emp_address}}</td>
+            <td>{{item.age}}</td>
+            <td>{{item.emp_number}}</td>
+            <td>
+              <!-- <card cardTitle="modal sizes"> -->
+              <button class="btn btn-primary" (click)="[fifthModal.open(), empEdit(item, index)]">
+                <i class="fa fa-pencil" aria-hidden="true"></i>
+              </button>
+            <!-- </card> -->     
+            </td>
+          </tr>
         </tbody>
       </table>
       <form class="pagination-wrapper">
@@ -49,7 +67,7 @@
             screenReaderCurrentLabel="You're on page">
           </pagination-controls>
         </div>
-        <div class="form-group options pages">
+        <div class="form-group options pages" *ngIf="role != 3">
           <div class="input-group input-group-sm">
             <select class="form-control" name="pageChangedName" [(ngModel)]="pageSize" (ngModelChange)="loadData()">
               <option>1</option>
@@ -95,13 +113,13 @@
 
           <label class="control-label">Number</label>
             <input type="test" class="form-control" [(ngModel)]="number" placeholder="enter mobile number">
-        </div>
-        <button class="btn btn-primary" (click)="editEmp(item, index, firstname, lastname, email, eage, address, number)" *ngIf="_id">EDIT</button>
-        <button class="btn btn-primary" (click)="addEmp(item, firstname, lastname, email, eage, address, number)" *ngIf="!_id">ADD</button>
+        <button class="btn btn-primary right" (click)="editEmp(item, index, firstname, lastname, email, eage, address, number)" *ngIf="_id">EDIT</button>
+        <button class="btn btn-success right" (click)="addEmp(item, firstname, lastname, email, eage, address, number)" *ngIf="!_id">ADD</button>
     <!-- </card> -->
+        </div>
   </modal-content>
   
   <modal-footer>
-    <button class="btn btn-primary" (click)="closeModal(fifthModal)">close</button>
+    <button class="btn btn-icon btn-danger" (click)="closeModal(fifthModal)">close</button>
   </modal-footer>
 </modal>
