--- a/src/app/pages/inventory/inventory-assignlist/inventory-assignlist.component.html
+++ b/src/app/pages/inventory/inventory-assignlist/inventory-assignlist.component.html
@@ -1,3 +1,50 @@
-<p>
-  inventory-assignlist works!
-</p>
+<div class="row">
+  <div class="col-md-12">
+    <!-- <card cardTitle="Data Table"> -->
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>BRANCH ID</th>
+            <th>ASSIGNED EMPLOYEE ID</th>
+            <th>INVENTROY ID</th>
+            <th>SHIPPED STATUS</th>
+            <th>VEHICLE NUMBER</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let item of inventoryassign | paginate: { id: 'pager', itemsPerPage: pageSize, currentPage: pageNumber};let index = index">
+            <td>{{index+1}}</td>
+            <td>{{item.branch_id}}</td>
+            <td>{{item.assign_emp_id}}</td>
+            <td>{{item.inventory_id}}</td>
+            <td>{{item.shipped_status}}</td>
+            <td>{{item.shipped_vehicle_number}}</td>
+          </tr>
+        </tbody>
+      </table>
+      <form class="pagination-wrapper">
+        <div class="form-group pages">
+          <pagination-controls class="my-pagination" id="pager" (pageChange)="pageChanged($event)" maxSize="9" directionLinks="true"
+            autoHide="true" previousLabel="Prev" nextLabel="Next" screenReaderPaginationLabel="Pagination" screenReaderPageLabel="page"
+            screenReaderCurrentLabel="You're on page">
+          </pagination-controls>
+        </div>
+        <div class="form-group options pages">
+          <div class="input-group input-group-sm">
+            <select class="form-control" name="pageChangedName" [(ngModel)]="pageSize" (ngModelChange)="loadData()">
+              <option>1</option>
+              <option>5</option>
+              <option>10</option>
+              <option>20</option>
+              <option>50</option>
+              <option>100</option>
+              <option>200</option>
+            </select>
+            <span class="input-group-addon addon-right">Per Page</span>
+          </div>
+        </div>
+      </form>
+    <!-- </card> -->
+  </div>
+</div>
