--- a/src/app/pages/setup/branches/branches.component.html
+++ b/src/app/pages/setup/branches/branches.component.html
@@ -24,7 +24,7 @@
             <td>{{item.branch_code}}</td>
             <td>{{item.address}}</td>
             <td>{{item.status}}</td>
-            <td>{{item.mobile_number}}</td>
+            <td>{{item.landline_number}}</td>
             <td>
               <!-- <card cardTitle="modal sizes"> -->
               <button class="btn btn-primary" (click)="[fifthModal.open(), branchpopEdit(item, index)]">
