--- a/src/app/pages/inventory/indent/indent.component.html
+++ b/src/app/pages/inventory/indent/indent.component.html
@@ -20,10 +20,10 @@
         <tbody>
           <tr *ngFor="let item of indent | paginate: { id: 'pager', itemsPerPage: pageSize, currentPage: pageNumber};let index = index">
             <td>{{index+1}}</td>
-            <td>{{item.Branch}}</td>
-            <td>{{item.Memory_GB}}</td>
-            <td>{{item.Ram_GB}}</td>
-            <td>{{item.Quantity}}</td>
+            <td>{{item.branch_id}}</td>
+            <td>{{item.memory_gb}}</td>
+            <td>{{item.ram_gb}}</td>
+            <td>{{item.quantity}}</td>
             <td>{{item.status}}</td>
             <td>
               <!-- <card cardTitle="modal sizes"> -->
