--- a/src/app/pages/manager/complaints/complaints.component.html
+++ b/src/app/pages/manager/complaints/complaints.component.html
@@ -17,12 +17,12 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let item of complaints | paginate: { id: 'pager', itemsPerPage: pageSize, currentPage: pageNumber};let index = index">
+          <tr *ngFor="let item of complaintes | paginate: { id: 'pager', itemsPerPage: pageSize, currentPage: pageNumber};let index = index">
             <td>{{index+1}}</td>
-            <td>{{item.emp_id}}</td>
-            <td>{{item.complaints_}}</td>
+            <td>{{item.complainee}}</td>
+            <td>{{item.complaints}}</td>
             <td>{{item.status}}</td>
-            <td>{{item.created_date }}</td>
+            <td>{{item.date_created }}</td>
             <td>
               <!-- <card cardTitle="modal sizes"> -->
               <button class="btn btn-primary" (click)="[fifthModal.open(), compEdit(item, index)]">
