--- a/src/app/pages/manager/complaints/complaints.component.html
+++ b/src/app/pages/manager/complaints/complaints.component.html
@@ -19,7 +19,7 @@
         <tbody>
           <tr *ngFor="let item of complaintes | paginate: { id: 'pager', itemsPerPage: pageSize, currentPage: pageNumber};let index = index">
             <td>{{index+1}}</td>
-            <td>{{item.complainee}}</td>
+            <td>{{item.emp_id}}</td>
             <td>{{item.complaints}}</td>
             <td>{{item.status}}</td>
             <td>{{item.date_created }}</td>
@@ -77,9 +77,9 @@
           <label class="control-label" >Complaint</label>
             <input type="text" class="form-control" [(ngModel)]="complaint" placeholder="enter the complaint">
 
-        
-        <button class="btn btn-primary right" (click)="editComp(item, index, employee, complaint)" *ngIf="_id">EDIT</button>
-        <button class="btn btn-success right" (click)="addComp(item, employee, complaint)" *ngIf="!_id">ADD</button>
+            <button class="btn btn-primary right" (click)="editComp(item, index, employee, complaint)" *ngIf="_id">EDIT</button>
+            <button class="btn btn-success right" (click)="addComp(item, employee, complaint)" *ngIf="!_id">ADD</button>
+
     <!-- </card> -->
         </div>
   </modal-content>
